Fix SystemStackError when calling a method in an unused refinement

Fixes [Bug #15720]